# crt-ros

./: .gitignore  LICENSE  README.md
src/crt_control/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  crt_control.files  crt_control.includes  package.xml
src/crt_control/crtbot_control/: CMakeLists.txt  package.xml
src/crt_control/crtbot_control/config/: crtbot_controllers.yaml  crtbot_controllers_sim.yaml
src/crt_control/crtbot_control/include/crtbot_control/: crtbot_hw_interface.h
src/crt_control/crtbot_control/launch/: crtbot_hardware.launch  crtbot_simulation.launch  crtbot_test_trajectory.launch  crtbot_visualize.launch
src/crt_control/crtbot_control/src/: crtbot_hw_interface.cpp  crtbot_hw_main.cpp
src/crt_control/include/ros_control_boilerplate/: generic_hw_control_loop.h  generic_hw_interface.h  sim_hw_interface.h
src/crt_control/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp  sim_hw_interface.cpp  sim_hw_main.cpp
src/crt_control/src/tools/: keyboard_teleop.cpp
src/crt_launch/: package.xml
src/crt_launch/config/: crtbot.rviz  crtbot_bigscreen.rviz  crtbot_gazebo.rviz  hokuyotest.rviz
src/crt_launch/launch/: all_pc.launch  all_robot.launch  crash_sim.launch  crash_usb.launch  debugserver.launch  gazebo.launch  laserscanner.launch  mapping.launch  multimaster.launch  teleop_saitek.launch  viz.launch
src/crt_launch/scripts/: button_down_clean.py  debugserver-socat.sh  debugserver.sh  lmc_leavebl.sh
src/crt_navigation/: CMakeLists.txt  package.xml
src/crt_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/crt_navigation/launch/: nav.launch
src/crt_navigation/maps/: empty.yaml  eurobot2017.xcf  eurobot2017.yaml
src/crt_rviz_plugins/: CMakeLists.txt  crt_rviz_plugins.files  crt_rviz_plugins.includes  package.xml  plugin_description.xml
src/crt_rviz_plugins/src/: drive_widget.cpp  drive_widget.h  hardware_measurements.cpp  hardware_measurements.h  teleop_panel.cpp  teleop_panel.h
src/crt_states/: CMakeLists.txt  package.xml
src/crt_states/python/: multi_static_if.py  multi_static_transform_publisher.py  sc.py
src/crtbot_description/: CMakeLists.txt  package.xml
src/crtbot_description/urdf/: crash.gazebo  crash.xacro  crash_simple.xacro  materials.xacro
src/raspicam_node/: package.xml
src/raspicam_node/launch/: camerav1_1024x768_10fps.launch
