<?xml version="1.0"?>
<package>
  <name>crt_control</name>
  <version>1.0.0</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <!-- original code of ros_control_boilerplate:
  <license>BSD</license>-->
  <!-- new code and changes licensed under: -->
  <license>GPLv3</license>

  <url type="website">https://turag.de/crt</url>
  <url type="repository">https://github.com/crashracing/</url>

  <maintainer email="crt@turag.de">Crash Racing Team (TURAG)</maintainer>
  <author email="crt@turag.de">Crash Racing Team (TURAG)</author>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
