<package>
  <name>crt_launch</name>
  <version>1.0.0</version>
  <description>Everything for launching Crash.</description>

  <license>GPLv3</license>

  <url type="website">https://turag.de/crt</url>
  <url type="repository">https://github.com/crashracing/</url>

  <maintainer email="crt@turag.de">Crash Racing Team (TURAG)</maintainer>
  <author email="crt@turag.de">Crash Racing Team (TURAG)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>rosserial_python</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>log4cxx</run_depend>
  <run_depend>crtbot_description</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>multimaster_fkie</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>lcsr_tf_tools</run_depend>

</package>
