<package>
  <name>crt_rviz_plugins</name>
  <version>1.0.0</version>
  <description>
     Crash Racing plugins for RViz.
  </description>

  <!-- original code of rviz_plugin_tutorials:
  <license>BSD</license>-->
  <!-- new code and changes licensed under: -->
  <license>GPLv3</license>

  <url type="website">https://turag.de/crt</url>
  <url type="repository">https://github.com/crashracing/</url>

  <maintainer email="crt@turag.de">Crash Racing Team (TURAG)</maintainer>
  <author email="crt@turag.de">Crash Racing Team (TURAG)</author>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
